--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "dev" : "nodemon index.js",
+        "dev": "nodemon index.js",
         "start": "node index.js"
     },
     "keywords": [],
@@ -13,6 +13,7 @@
     "dependencies": {
         "express": "^4.18.1",
         "nodemon": "^2.0.19",
+        "request": "^2.88.2",
         "request-promise": "^4.2.6"
     }
 }
